--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
   "bugs": {
     "url": "https://github.com/Ysdra/Node_ReadME_Generator/issues"
   },
-  "homepage": "https://github.com/Ysdra/Node_ReadME_Generator#readme"
+  "homepage": "https://github.com/Ysdra/Node_ReadME_Generator#readme",
+  "dependencies": {
+    "fs.promises": "^0.1.2",
+    "inquirer": "^7.3.3",
+    "save": "^2.4.0",
+    "util": "^0.12.3"
+  }
 }
