--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/Ysdra/Node_ReadME_Generator#readme",
   "dependencies": {
+    "fs": "0.0.1-security",
     "fs.promises": "^0.1.2",
     "inquirer": "^7.3.3",
     "util": "^0.12.3"
